--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "adal-node": "^0.1.28",
+    "jwt-decode": "^2.2.0",
     "request": "^2.85.0"
   }
 }
